cmake_minimum_required(VERSION 3.18)
project(RakNetStatic)

include_directories(${RAKNET_INTERNAL_INCLUDE_DIRS}) 

add_library(RakNet STATIC)
target_sources(RakNet PRIVATE ${RAKNET_CPP_SRCS} ${RAKNET_HEADER_SRCS})

IF(WIN32 AND NOT UNIX)
	SET(CMAKE_CXX_FLAGS "/D WIN32 /D _RAKNET_LIB /D _CRT_NONSTDC_NO_DEPRECATE /D _CRT_SECURE_NO_DEPRECATE /GS- /GR- ")
ENDIF(WIN32 AND NOT UNIX)

IF(WIN32 AND NOT UNIX)
	target_link_libraries(RakNet ${RAKNET_LIBRARY_LIBS})

	IF(NOT ${CMAKE_GENERATOR} STREQUAL "MSYS Makefiles")

		IF(MSVC10 OR MSVC11 OR MSVC12)
			set_target_properties(RakNet PROPERTIES STATIC_LIBRARY_FLAGS "/NODEFAULTLIB:\"LIBCD.lib LIBCMTD.lib MSVCRT.lib\"")
		ELSE()
			set_target_properties(RakNet PROPERTIES STATIC_LIBRARY_FLAGS "/NODEFAULTLIB:&quot;LIBCD.lib LIBCMTD.lib MSVCRT.lib&quot;")
		ENDIF()
			
	ENDIF(NOT ${CMAKE_GENERATOR} STREQUAL "MSYS Makefiles")

ELSE(WIN32 AND NOT UNIX)
	target_link_libraries(RakNet ${RAKNET_LIBRARY_LIBS})
	INSTALL(TARGETS RakNet DESTINATION ${RakNet_SOURCE_DIR}/Lib/Static)
	INSTALL(FILES ${RAKNET_HEADER_SRCS} DESTINATION ${RakNet_SOURCE_DIR}/include/raknet)
ENDIF(WIN32 AND NOT UNIX)


